# alaya2026

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README_bn.md  README_en.md  README_es.md  README_fr.md  README_gu.md  README_hi.md  README_kn.md  README_ko.md  README_ml.md  README_mr.md  README_pa.md  README_ta.md  README_te.md  README_ur.md  README_zh.md  SECURITY.md  Start-DharmaServer.ps1  pyproject.toml  server.py  stop-dharma-server.bat
.claude/hooks/: session-start.sh
.github/workflows/: ci.yml
benchmarks/: bench_dharma.py  bench_fep_vs_sa.py  bench_hardware.py  run_benchmarks.py
config/: README.txt  semantic_emotions.json
examples/: benchmark.py  demo_e2e_rag.py  demo_gemini.py  demo_rag_reranker.py
lmm/: __init__.py  __main__.py  _compat.py  _validation.py  cli.py  core.py  i18n.py  pipeline.py  processor.py  qubo.py  rust_bridge.py  selector.py  solvers.py  surprise.py
lmm/_vendor/: __init__.py
lmm/_vendor/numpy/: __init__.py
lmm/_vendor/numpy/linalg/: __init__.py
lmm/_vendor/numpy/random/: __init__.py
lmm/_vendor/pytest/: __init__.py
lmm/_vendor/scipy/: __init__.py
lmm/_vendor/scipy/optimize/: __init__.py
lmm/_vendor/scipy/sparse/: __init__.py
lmm/dharma/: __init__.py  algorithms.py  api.py  concepts.py  energy.py  engine.py  fep.py  interpreter.py  neuromorphic.py  patthana.py  pratitya.py  reranker.py  sangha.py  topology.py  topology_ast.py  vow.py
lmm/hal/: __init__.py  base.py  devices.py
lmm/integrations/: __init__.py  langchain.py  llamaindex.py
lmm/llm/: __init__.py  drift.py  embeddings.py  fewshot.py  reranker.py  sampler.py
lmm/memory/: __init__.py  backend.py  persistent.py
lmm/providers/: __init__.py  adapters.py  base.py
lmm/reasoning/: __init__.py  active.py  adaptive.py  alaya.py  base.py  context_bridge.py  embodiment.py  heartbeat.py  hyper.py  orchestrator.py  pineal.py  recovery.py  sleep.py  theoretical.py
lmm/sangha/: __init__.py  protocol.py
lmm/scale/: __init__.py  cascade.py  pipeline.py  sketch.py  stream.py
lmm/tools/: __init__.py  base.py  builtins.py  executor.py
lmm_rust_core/: Cargo.toml  pyproject.toml
lmm_rust_core/src/: lib.rs
tests/: conftest.py  test_agent_robustness.py  test_benchmarks.py  test_cascade.py  test_context_bridge.py  test_core.py  test_correctness_bruteforce.py  test_dharma_algorithms.py  test_dharma_api.py  test_dharma_energy.py  test_dharma_engine.py  test_dharma_topology.py  test_e2e.py  test_fep.py  test_hal.py  test_heartbeat.py  test_langchain.py  test_llamaindex.py  test_llm.py  test_memory_backend.py  test_neuromorphic.py  test_numerical.py  test_pipeline.py  test_processor.py  test_providers.py  test_qubo.py  test_reasoning.py  test_recovery.py  test_reranker.py  test_sangha.py  test_sangha_protocol.py  test_scale_pipeline.py  test_selector.py  test_sketch.py  test_solvers.py  test_stream.py  test_surprise.py  test_tools.py  test_topology_ast.py  test_validation.py
web/: alaya-v4-auto-descent.html  alaya-v5-auto-descent.html  performance-graphs.html
